--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,1 +1,204 @@
+   body {
+    background-color: white;
+    margin: 0;
+    padding:0;
+    width: 100%;
+    height: 100vh;
+    }
+
+#placeholder i {
+    padding: 20%;
+}
+.flex-container {
+  padding: 0;
+  margin: 5vh 5vw;
+  list-style: none;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-flow: row wrap;
+  flex-flow: row wrap;
+  justify-content: space-around;
+  cursor: default;
+}
+
+h1 {
+    font-size: 2.75rem;
+    font-family: 'Segoe UI', 'Verdana', sans-serif;
+    text-shadow: 2px 2px lightgray;
+}
+.code {
+    font-size: 2.75rem;
+    font-family: Courier New, Courier, monospace;
+}
+
+.flex-item {
+  background: lightgray;
+  padding: 0;
+  width: 40vw;
+  height: 40vh;
+  line-height: 1rem;
+  color: white;
+  font-size: 1rem;
+  text-align: center;
+   font-family: 'Segoe UI', 'Verdana', sans-serif;
+}
+
+.flex-caption {
+  width: 30vw;
+  height: 2rem;
+  padding: 0;
+  font-size: 1rem;
+  text-align: center;
+font-family: 'Segoe UI', 'Verdana', sans-serif;
+}
+        
+div#container {
+    position: relative;
+    width: 80vw;
+    margin: auto;
+    padding-top:12px;
+    padding-bottom: 12px;
+    text-align: center;
+    }
+
+.header {
+    background: lightsalmon;
+    text-align: center;
+    padding: 12px;
+    box-sizing: border-box;
+
+.buttoncontainer {
+    text-align: center;
+    padding: 6px;
+    display: none;
+    }
+
+div#textcontainer {
+    position: relative;
+    width: 75vw;
+    margin: auto;
+    text-align: center;
+    height: 0;
+    }
+
+form {
+    width: 100%;
+    margin: auto;
+    text-align:center;
+    position: relative;
+}
+
+
+input[type=button], input[type=submit] {
+    background-color: darkcyan;
+    color: white;
+    height: 50px;
+    text-decoration: bold;
+    font-family: 'Segoe UI', 'Verdana', sans-serif;
+    font-size: 18px;
+    padding: 8px;
+    cursor: pointer;
+}
+
+p.bodytext {
+    margin: 16px 5vw;
+}
+
+button {
+    height: 50px;
+    padding: 8px;
+    font-size: 18px;
+    text-decoration: bold;
+    font-family: 'Segoe UI', 'Verdana', sans-serif;
+}
+
+input:disabled{
+    background-color: rgba(200,200,200,.6);
+    color: white; 
+}
+
+footer {
+    color: black;
+    font-family: 'Segoe UI', 'Verdana', sans-serif;
+    position: fixed;
+    bottom: 10px;
+    margin: auto;
+    width: 100%;
+    text-align:center;
+}
+
+footer p{
+    font-size: 12px;
+}
+
+#badge::before {
+    content: "\f0a3";
+    font-family: FontAwesome;
+    font-style: normal;
+    font-weight: normal;
+    text-decoration: inherit;
+    font-size: 20vw;
+    color: darkcyan;
+    text-shadow: 2px 2px lightgray;
+}
+
+#badge{
+    position: fixed;
+    top: 30vh;
+    left: 40vw;
+    height: 20vh;
+    width: 20vw;
+    opacity:0;
+    text-align: center;
+    z-index: 20;
+}
+
+#score {
+    position: fixed;
+    top: 40vh;
+    left: 40vw;
+    height: 20vh;
+    width: 20vw;
+    color: white;
+    font-family: 'Segoe UI', 'Verdana', sans-serif;
+    font-size: 2.5vw;
+    opacity:0;
+    text-align: center;
+    z-index:30;
+    transform: rotateZ(6deg);
+}
+
+p.message {
+    font-family: 'Segoe UI', 'Verdana', sans-serif;
+    font-size: 12px;
+    color: white;
+    padding: 0;
+    line-height: 1rem;
+}
+
+p {
+    font-family: 'Segoe UI', 'Verdana', sans-serif;
+}
+
+h2 {
+    font-family: 'Segoe UI', 'Verdana', sans-serif;
+    font-size: 2rem;
+}
+
+a {
+    text-decoration: underline;
+    color: black;
+    font-family: 'Segoe UI', 'Verdana', sans-serif;
+}
+
+@font-face {
+  font-family: 'FontAwesome';
+  src: url('../font/fontawesome-webfont.eot');
+  src: url('../font/fontawesome-webfont.eot?#iefix') format('embedded-opentype'), url('../font/fontawesome-webfont.woff') format('woff'), url('../font/fontawesome-webfont.ttf') format('truetype'), url('../font/fontawesome-webfont.svg#fontawesomeregular') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
 
