--- a/public/css/style.css
+++ b/public/css/style.css
@@ -165,7 +165,7 @@ footer p{
     height: 20vw;
     width: 20vw;
     margin-top: 5vw;
-    margin-left: -1vw;
+    margin-left: -1px;
     color: white;
     font-family: 'Segoe UI', 'Verdana', sans-serif;
     font-size: 2.75vw;
